--- a/index.html
+++ b/index.html
@@ -49,28 +49,6 @@
       color: #2c3e50;
       font-size: 16px;
     }
-    
-    .leaflet-marker-icon {
-transition: transform 0.2s ease, box-shadow 0.2s ease;
-  cursor: pointer;
-}
-
-.leaflet-marker-icon:hover {
-  transform: scale(1.15);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.5);}
-
-    .leaflet-div-icon {
-    background: transparent;
-    border: none;
-  }
-    
-    .leaflet-div-icon:hover {
-    transform: scale(1.15);
-    box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-    cursor: pointer;
-  }
-
   </style>
 </head>
 <body>
@@ -80,35 +58,7 @@ transition: transform 0.2s ease, box-shadow 0.2s ease;
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
-var map = L.map('map').setView([38.5, 15.0], 5);
-
-function getIconByZoom(zoom) {
-  const size = Math.max(25, Math.min(zoom * 5, 50)); // Ajuste entre 25 et 50px
-
-  const svgIcon = `
-  <svg xmlns="http://www.w3.org/2000/svg" width="${size}" height="${size}" viewBox="0 0 500 500">
-    <g transform="translate(0,500) scale(0.1,-0.1)" fill="#0077b6" stroke="none">
-      <path d="M2455 4989 c-794 -52 -1560 -416 -2100 -1014 -820 -902 -1047 -2187 -588 -3324 255 -634 711 -1172 1303 -1522 455 -270 962 -420 1510 -443 593 -26 1131 98 1675 384 331 173 589 371 870 672 440 472 724 1023 858 1668 52 245 71 413 71 675 0 532 -117 1021 -360 1490 -241 464 -601 885 -1029 1194 -538 384 -1177 592 -1835 620 -91 4 -202 3 -275 0z m715 -854 c493 -70 909 -254 1296 -570 92 -76 302 -289 379 -386 438 -547 637 -1259 551 -1956 -80 -661 -375 -1261 -851 -1721 -450 -436 -973 -696 -1575 -787 -176 -26 -566 -31 -740 -10 -567 69 -1047 269 -1480 623 -133 108 -377 351 -485 484 -359 440 -578 958 -635 1511 -14 138 -14 475 0 610 83 806 489 1501 1145 1975 422 305 940 503 1455 547 119 10 385 4 540 -10z"/>
-      <path d="M2460 3815 l0 -675 -237 -2 -238 -3 -3 -232 -2 -233 240 0 240 0 0 -817 c0 -812 0 -818 22 -915 67 -301 238 -497 518 -596 239 -85 534 -80 855 15 l100 29 3 243 2 243 -142 -6 c-175 -8 -306 8 -388 48 -94 47 -156 123 -180 220 -18 73 -20 128 -20 805 l0 725 395 5 395 5 3 233 2 232 -397 3 -398 2 0 675 0 675 -315 0 -315 0 0 -675z"/>
-    </g>
-  </svg>
-  `;
-
-  return L.divIcon({
-    html: svgIcon,
-    iconSize: [size, size],
-    className: '',
-    iconAnchor: [size/2, size],
-    popupAnchor: [0, -size/2]
-  });
-}
-
- function reactiverZoom() {
-  map.touchZoom.enable();
-}
-
-map.on('popupopen', reactiverZoom);
-map.on('popupclose', reactiverZoom);
+  var map = L.map('map').setView([38.5, 15.0], 5);
 
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '© OpenStreetMap contributors'
@@ -179,6 +129,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.676804, 8.901093], nom: "Port de Propriano", date: "26 juin 2025", image:"https://static.wixstatic.com/media/e51b28_bf763c1ef79546aca1f2cd473a5e7d37~mv2.jpeg" },
   ];
 
+       var isMobile = window.innerWidth < 768;
   var markers = {};
 
   escales.forEach(function(escale) {
@@ -191,9 +142,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     contenu += "<br><a href='" + escale.lien + "' target='_blank' rel='noopener' style='display:inline-block; margin-top:5px; color:#2c3e50; text-decoration:underline;'>Lire l'article</a>";
   }
 
-var marker = L.marker(escale.coords, { icon: getIconByZoom(map.getZoom()) })
-  .addTo(map)
-  .bindPopup(contenu);
+   var marker= L.marker(escale.coords).addTo(map).bindPopup(contenu);
    markers[escale.coords.join(",")] = marker;
 
 
@@ -206,26 +155,16 @@ var marker = L.marker(escale.coords, { icon: getIconByZoom(map.getZoom()) })
     });
   }
   });
-  
-   map.on('zoomend', function() {
-    var newZoom = map.getZoom();
-    escales.forEach(function(escale) {
-      var marker = markers[escale.coords.join(",")];
-      if (marker) {
-        marker.setIcon(getIconByZoom(newZoom));
-      }
-    });
-  });
 
   map.on('zoomend moveend', function () {
     var currentZoom = map.getZoom();
     var bounds = map.getBounds();
-  
+
     escales.forEach(function(escale) {
         var marker = markers[escale.coords.join(",")];
-        if (currentZoom >= 11 && bounds.contains(marker.getLatLng())) {
+        if (currentZoom >= 12 && bounds.contains(marker.getLatLng())) {
             marker.openPopup();
-        } else if (currentZoom < 11) {
+        } else if (currentZoom < 12) {
             marker.closePopup();
         }
     });
