--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
       color: #2c3e50;
       font-size: 16px;
     }
+    
+    .leaflet-marker-icon {
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      cursor: pointer;
+    }
+
+    .leaflet-marker-icon:hover {
+      transform: scale(1.2);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+    }
   </style>
 </head>
 <body>
