--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   }
 
+    .leaflet-popup-content a {
+  color: #2c3e50;
+  text-decoration: none;
+}
+
     .leaflet-popup-content a:hover {
   color: #0077b6;
   text-decoration: underline;
