--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [42.130883, 8.597116], nom: "Port de Cargèse", date: "21 juin 2025", image:"https://static.wixstatic.com/media/e51b28_799d628f99984aa98569d253b082822e~mv2.jpg" },
     { coords: [41.919888, 8.743765], nom: "Port Tino-Rossi de Ajaccio", date: "23 juin 2025", image:"https://static.wixstatic.com/media/e51b28_54f61a45201148b59cc79ffde44e6103~mv2.jpeg" },
     { coords: [41.676804, 8.901093], nom: "Port de Propriano", date: "26 juin 2025", image:"https://static.wixstatic.com/media/e51b28_bf763c1ef79546aca1f2cd473a5e7d37~mv2.jpeg" },
+    { coords: [41.494190, 8.932528], nom: "Mouillage de Roccapina", date: "29 juin 2025", image:"https://static.wixstatic.com/media/e51b28_dd4a90b0a895487bac5b3d257d6231d2~mv2.jpeg" },
   ];
 
        var isMobile = window.innerWidth < 768;
