--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.919888, 8.743765], nom: "Port Tino-Rossi de Ajaccio", date: "23 juin 2025", image:"https://static.wixstatic.com/media/e51b28_54f61a45201148b59cc79ffde44e6103~mv2.jpeg" },
     { coords: [41.676804, 8.901093], nom: "Port de Propriano", date: "26 juin 2025", image:"https://static.wixstatic.com/media/e51b28_bf763c1ef79546aca1f2cd473a5e7d37~mv2.jpeg" },
     { coords: [41.494190, 8.932528], nom: "Mouillage de Roccapina", date: "29 juin 2025", image:"https://static.wixstatic.com/media/e51b28_dd4a90b0a895487bac5b3d257d6231d2~mv2.jpeg" },
+    { coords: [41.388702, 9.148393], nom: "Port de Bonifacio", date: "premier juillet 2025", image:"https://static.wixstatic.com/media/e51b28_11f1f6729a9846409d5a8d0a9d66d240~mv2.jpeg" },
   ];
 
        var isMobile = window.innerWidth < 768;
