--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [42.565689, 8.762498], nom: "Port de Calvi", date: "14 juin 2025", image: "https://static.wixstatic.com/media/e51b28_80120ea6eba94ca0bdc28a119be093ab~mv2.jpg", lien:"https://www.andyboat.com/post/calvi" },
     { coords: [42.349433, 8.614150], nom: "Port de Girolata", date: "19 juin 2025", image:"https://static.wixstatic.com/media/e51b28_ac2e2b1d437449c2b3c48201fd0842a7~mv2.jpg", lien:"https://www.andyboat.com/post/girolata" },
     { coords: [42.236466, 8.559100], nom: "Mouillage Anse San Pellegrinu, Cap Rossu Nord ", date: "20 juin 2025", image:"https://static.wixstatic.com/media/e51b28_f91d5fc026354becb9261a90a4deea97~mv2.jpg", lien:"https://www.andyboat.com/post/notre-premier-mouillage-de-nuit" },
-    { coords: [42.130883, 8.597116], nom: "Port de Cargèse", date: "21 juin 2025", image:"https://static.wixstatic.com/media/e51b28_799d628f99984aa98569d253b082822e~mv2.jpg" },
-    { coords: [41.919888, 8.743765], nom: "Port Tino-Rossi de Ajaccio", date: "23 juin 2025", image:"https://static.wixstatic.com/media/e51b28_54f61a45201148b59cc79ffde44e6103~mv2.jpeg" },
-    { coords: [41.676804, 8.901093], nom: "Port de Propriano", date: "26 juin 2025", image:"https://static.wixstatic.com/media/e51b28_bf763c1ef79546aca1f2cd473a5e7d37~mv2.jpeg" },
-    { coords: [41.494190, 8.932528], nom: "Mouillage de Roccapina", date: "29 juin 2025", image:"https://static.wixstatic.com/media/e51b28_dd4a90b0a895487bac5b3d257d6231d2~mv2.jpeg" },
-    { coords: [41.388702, 9.148393], nom: "Port de Bonifacio", date: "premier juillet 2025", image:"https://static.wixstatic.com/media/e51b28_11f1f6729a9846409d5a8d0a9d66d240~mv2.jpeg" },
+    { coords: [42.130883, 8.597116], nom: "Port de Cargèse", date: "21 juin 2025", image:"https://static.wixstatic.com/media/e51b28_799d628f99984aa98569d253b082822e~mv2.jpg", lien:"https://www.andyboat.com/post/cargèse" },
+    { coords: [41.919888, 8.743765], nom: "Port Tino-Rossi de Ajaccio", date: "23 juin 2025", image:"https://static.wixstatic.com/media/e51b28_54f61a45201148b59cc79ffde44e6103~mv2.jpeg", lien:"https://www.andyboat.com/post/ajaccio" },
+    { coords: [41.676804, 8.901093], nom: "Port de Propriano", date: "26 juin 2025", image:"https://static.wixstatic.com/media/e51b28_bf763c1ef79546aca1f2cd473a5e7d37~mv2.jpeg", lien"https://www.andyboat.com/post/propriano" },
+    { coords: [41.494190, 8.932528], nom: "Mouillage de Roccapina", date: "29 juin 2025", image:"https://static.wixstatic.com/media/e51b28_dd4a90b0a895487bac5b3d257d6231d2~mv2.jpeg", lien:"https://www.andyboat.com/post/rocapina" },
+    { coords: [41.388702, 9.148393], nom: "Port de Bonifacio", date: "premier juillet 2025", image:"https://static.wixstatic.com/media/e51b28_11f1f6729a9846409d5a8d0a9d66d240~mv2.jpeg", lien:"https://www.andyboat.com/post/bonifacio" },
   ];
 
        var isMobile = window.innerWidth < 768;
