--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
     [41.627120, 8.773270], [41.587170, 8.759193], [41.541349, 8.780136], [41.507228, 8.837471],
     [41.486559, 8.919525], [41.489404, 8.928280], [41.494190, 8.932528], [41.487548, 8.929482],
     [41.460610, 8.937378], [41.389608, 9.095650], [41.377292, 9.141827], [41.388702, 9.148393],
+    [41.386738, 9.147813], [41.381285, 9.148006], [41.310695, 9.224396], [41.263743, 9.326706], 
+    [41.272380, 9.417472], [41.258549, 9.435711], [41.256735, 9.429746], [41.257642, 9.427600],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -162,6 +164,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.676804, 8.901093], nom: "Port de Propriano", date: "26 juin 2025", image:"https://static.wixstatic.com/media/e51b28_bf763c1ef79546aca1f2cd473a5e7d37~mv2.jpeg", lien:"https://www.andyboat.com/post/propriano" },
     { coords: [41.494190, 8.932528], nom: "Mouillage de Roccapina", date: "29 juin 2025", image:"https://static.wixstatic.com/media/e51b28_dd4a90b0a895487bac5b3d257d6231d2~mv2.jpeg", lien:"https://www.andyboat.com/post/rocapina" },
     { coords: [41.388702, 9.148393], nom: "Port de Bonifacio", date: "premier juillet 2025", image:"https://static.wixstatic.com/media/e51b28_11f1f6729a9846409d5a8d0a9d66d240~mv2.jpeg", lien:"https://www.andyboat.com/post/bonifacio" },
+    { coords: [41.257642, 9.427600], nom: "Porto Massimo", date: "3 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_0fa1ed032d934d7688f44e979195c1d7~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
