--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.494190, 8.932528], nom: "Mouillage de Roccapina", date: "29 juin 2025", image:"https://static.wixstatic.com/media/e51b28_dd4a90b0a895487bac5b3d257d6231d2~mv2.jpeg", lien:"https://www.andyboat.com/post/rocapina" },
     { coords: [41.388702, 9.148393], nom: "Port de Bonifacio", date: "premier juillet 2025", image:"https://static.wixstatic.com/media/e51b28_11f1f6729a9846409d5a8d0a9d66d240~mv2.jpeg", lien:"https://www.andyboat.com/post/bonifacio" },
     { coords: [41.257642, 9.427600], nom: "Porto Massimo", date: "3 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_0fa1ed032d934d7688f44e979195c1d7~mv2.jpeg"},
-    { coords: [40.928533, 12.859250], nom: "Cala Brigantina, Isola Palmarola (îles Pontines)", date: "5 juillet 2025"},
+    { coords: [40.928533, 12.859250], nom: "Mouillage Cala Brigantina, Isola Palmarola (îles Pontines)", date: "5 juillet 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
