--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.388702, 9.148393], nom: "Port de Bonifacio", date: "premier juillet 2025", image:"https://static.wixstatic.com/media/e51b28_11f1f6729a9846409d5a8d0a9d66d240~mv2.jpeg", lien:"https://www.andyboat.com/post/bonifacio" },
     { coords: [41.257642, 9.427600], nom: "Porto Massimo", date: "3 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_0fa1ed032d934d7688f44e979195c1d7~mv2.jpeg"},
     { coords: [40.928533, 12.859250], nom: "Mouillage Cala Brigantina, Palmarola (îles Pontines)", date: "5 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_352396c9728a475e8ca899be67cfe638~mv2.jpeg"},
-    { coords: [40.899416, 12.961783], nom: "Pontile Porzio, Port de Ponza (îles Pontines)", date: "6 juillet 2025"},
+    { coords: [40.899416, 12.961783], nom: "Pontile Porzio, Port de Ponza (îles Pontines)", date: "6 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_5e975c586f094be086b954cf7b2850ac~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
