--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
     [41.272380, 9.417472], [41.258549, 9.435711], [41.256735, 9.429746], [41.257642, 9.427600],
     [41.215700, 9.609666], [41.179616, 9.829666], [40.888666, 12.796266], [40.907383, 12.846000],
     [40.928533, 12.859250], [40.925106, 12.858553], [40.875671, 12.952280], [40.882550, 12.967300], 
-    [40.894813, 12.975540], [40.897741, 12.968202], [40.899416, 12.961783],
+    [40.894813, 12.975540], [40.897741, 12.968202], [40.899416, 12.961783], [40.898151, 12.973330],
+    [40.804186, 13.434606], [40.797612, 13.436408], [40.797076, 13.434176],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -170,6 +171,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.257642, 9.427600], nom: "Porto Massimo", date: "3 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_0fa1ed032d934d7688f44e979195c1d7~mv2.jpeg"},
     { coords: [40.928533, 12.859250], nom: "Mouillage Cala Brigantina, Palmarola (îles Pontines)", date: "5 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_352396c9728a475e8ca899be67cfe638~mv2.jpeg"},
     { coords: [40.899416, 12.961783], nom: "Pontile Porzio, Port de Ponza (îles Pontines)", date: "6 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_5e975c586f094be086b954cf7b2850ac~mv2.jpeg"},
+    { coords: [40.797076, 13.434176], nom: "Porto Vecchio Ventotene (îles Pontines)", date: "9 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_7a23f7fcdf0942d7a6fcffc194a74051~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
