--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.257642, 9.427600], nom: "Porto Massimo", date: "3 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_0fa1ed032d934d7688f44e979195c1d7~mv2.jpeg"},
     { coords: [40.928533, 12.859250], nom: "Mouillage Cala Brigantina, Palmarola (îles Pontines)", date: "5 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_352396c9728a475e8ca899be67cfe638~mv2.jpeg"},
     { coords: [40.899416, 12.961783], nom: "Pontile Porzio, Port de Ponza (îles Pontines)", date: "6 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_5e975c586f094be086b954cf7b2850ac~mv2.jpeg"},
-    { coords: [40.797076, 13.434176], nom: "Porto Vecchio Ventotene (îles Pontines)", date: "9 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_7a23f7fcdf0942d7a6fcffc194a74051~mv2.jpeg"},
+    { coords: [40.797076, 13.434176], nom: "Porto Vecchio Ventotene (îles Pontines)", date: "9 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_7a23f7fcdf0942d7a6fcffc194a74051~mv2.jpeg", galerie: "https://andyboat.com/gallerie#ventot%C3%A8ne"},
     { coords: [38.476799, 14.962392], nom: "Porto Pignataro Lipari (îles Eoliennes)", date: "11 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_d64c3a0bf7e24e749aa5478e3af50b68~mv2.jpeg"},
   ];
 
