--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@ map.fitBounds(polyline.getBounds(), paddingOptions);
     { coords: [41.676804, 8.901093], nom: "Port de Propriano", date: "26 juin 2025", image:"https://static.wixstatic.com/media/e51b28_bf763c1ef79546aca1f2cd473a5e7d37~mv2.jpeg", lien:"https://www.andyboat.com/post/propriano", galerie:"https://andyboat.com/gallerie#photos-propriano" },
     { coords: [41.494190, 8.932528], nom: "Mouillage de Roccapina", date: "29 juin 2025", image:"https://static.wixstatic.com/media/e51b28_dd4a90b0a895487bac5b3d257d6231d2~mv2.jpeg", lien:"https://www.andyboat.com/post/rocapina" },
     { coords: [41.388702, 9.148393], nom: "Port de Bonifacio", date: "premier juillet 2025", image:"https://static.wixstatic.com/media/e51b28_11f1f6729a9846409d5a8d0a9d66d240~mv2.jpeg", lien:"https://www.andyboat.com/post/bonifacio" },
-    { coords: [41.257642, 9.427600], nom: "Porto Massimo", date: "3 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_0fa1ed032d934d7688f44e979195c1d7~mv2.jpeg"},
-    { coords: [40.928533, 12.859250], nom: "Mouillage Cala Brigantina, Palmarola (îles Pontines)", date: "5 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_352396c9728a475e8ca899be67cfe638~mv2.jpeg"},
-    { coords: [40.899416, 12.961783], nom: "Pontile Porzio, Port de Ponza (îles Pontines)", date: "6 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_5e975c586f094be086b954cf7b2850ac~mv2.jpeg"},
-    { coords: [40.797076, 13.434176], nom: "Porto Vecchio Ventotene (îles Pontines)", date: "9 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_7a23f7fcdf0942d7a6fcffc194a74051~mv2.jpeg", galerie: "https://andyboat.com/copie-de-galerie-photos#ventot%C3%A8ne"},
-    { coords: [38.476799, 14.962392], nom: "Porto Pignataro Lipari (îles Eoliennes)", date: "11 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_d64c3a0bf7e24e749aa5478e3af50b68~mv2.jpeg"},
+    { coords: [41.257642, 9.427600], nom: "Porto Massimo", date: "3 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_0fa1ed032d934d7688f44e979195c1d7~mv2.jpeg", lien: "https://www.andyboat.com/post/massimo"},
+    { coords: [40.928533, 12.859250], nom: "Mouillage Cala Brigantina, Palmarola (îles Pontines)", date: "5 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_352396c9728a475e8ca899be67cfe638~mv2.jpeg", lien: "https://www.andyboat.com/post/palmarola"},
+    { coords: [40.899416, 12.961783], nom: "Pontile Porzio, Port de Ponza (îles Pontines)", date: "6 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_5e975c586f094be086b954cf7b2850ac~mv2.jpeg", lien: "https://www.andyboat.com/post/ponza"},
+    { coords: [40.797076, 13.434176], nom: "Porto Vecchio Ventotene (îles Pontines)", date: "9 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_7a23f7fcdf0942d7a6fcffc194a74051~mv2.jpeg", lien:"https://www.andyboat.com/post/ventotene", galerie: "https://andyboat.com/copie-de-galerie-photos#ventot%C3%A8ne"},
+    { coords: [38.476799, 14.962392], nom: "Porto Pignataro Lipari (îles Eoliennes)", date: "11 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_d64c3a0bf7e24e749aa5478e3af50b68~mv2.jpeg", lien:"https://www.andyboat.com/post/lipari"},
   ];
 
        var isMobile = window.innerWidth < 768;
