--- a/index.html
+++ b/index.html
@@ -152,24 +152,30 @@ var paddingOptions = isMobile
 
 map.fitBounds(polyline.getBounds(), paddingOptions);
 
-  // Ligne Ventotene → Lipari avec vidéos au 1er et 2e tiers
-const routeVentoteneLipari = L.polyline([
-    [40.797612, 13.436408], // Ventotene
-    [38.476799, 14.962392]  // Lipari
-], { color: 'red', weight: 4, opacity: 0.8 }).addTo(map);
-
-// Marqueur invisible — premier tiers
-const point1VentLip = L.marker([39.987, 13.90], { opacity: 0.01 }).addTo(map);
-point1VentLip.bindPopup(`
+ // Marqueur vidéo 1 — premier tiers de la route Ventotene-Lipari
+L.marker([39.987, 13.90], {
+    icon: L.icon({
+        iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+    })
+}).addTo(map).bindPopup(`
   <video width="300" controls>
     <source src="https://video.wixstatic.com/video/e51b28_a5b12c4ad7d64a6da0adc4da4da6764f/1080p/mp4/file.mp4" type="video/mp4">
     Votre navigateur ne supporte pas la vidéo HTML5.
   </video>
 `);
 
-// Marqueur invisible — deuxième tiers
-const point2VentLip = L.marker([39.2, 14.45], { opacity: 0.01 }).addTo(map);
-point2VentLip.bindPopup(`
+// Marqueur vidéo 2 — deuxième tiers de la route Ventotene-Lipari
+L.marker([39.2, 14.45], {
+    icon: L.icon({
+        iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+    })
+}).addTo(map).bindPopup(`
   <video width="300" controls>
     <source src="https://video.wixstatic.com/video/e51b28_a98c9cc3a557407ba4f317fb7ee5059b/480p/mp4/file.mp4" type="video/mp4">
     Votre navigateur ne supporte pas la vidéo HTML5.
