--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@ L.marker([39.250225, 14.452987], { icon: videoIcon }).addTo(map).bindPopup(`
     { coords: [40.899416, 12.961783], nom: "Pontile Porzio, Port de Ponza (îles Pontines)", date: "6 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_5e975c586f094be086b954cf7b2850ac~mv2.jpeg", lien: "https://www.andyboat.com/post/ponza"},
     { coords: [40.797076, 13.434176], nom: "Porto Vecchio Ventotene (îles Pontines)", date: "9 juillet 2025", image:"https://static.wixstatic.com/media/e51b28_7a23f7fcdf0942d7a6fcffc194a74051~mv2.jpeg", lien:"https://www.andyboat.com/post/ventotene", galerie: "https://andyboat.com/copie-de-galerie-photos#ventot%C3%A8ne"},
     { coords: [38.476799, 14.962392], nom: "Porto Pignataro Lipari (îles Eoliennes)", date: "11 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_d64c3a0bf7e24e749aa5478e3af50b68~mv2.jpeg", lien:"https://www.andyboat.com/post/lipari", galerie: "https://www.andyboat.com/copie-de-photos-ventotène#lipari"},
-    { coords: [37.846765, 15.288334], nom: "Mouillage bouée Baia di Taormina", date: "14 juillet 2025"},
+    { coords: [37.846765, 15.288334], nom: "Mouillage bouée Baia di Taormina", date: "14 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_3f48ff640af04726aa647b6c5abbf753~mv2.jpeg"},
+    { coords: [37.062218, 15.289503], nom: "Port de Syracuse", date: "15 juillet 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
