--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     [38.309740, 15.556641], [38.268780, 15.667877], [38.241281, 15.608826], [38.144683, 15.551834], 
     [38.060898, 15.489178], [37.840801, 15.300007], [37.846765, 15.288334], [37.823006, 15.290909],
     [37.567168, 15.216064], [37.254107, 15.294342], [37.054492, 15.315628], [37.049800, 15.293312],
-    [37.062218, 15.289503],
+    [37.062218, 15.289503], [37.050956, 15.289364], [37.051718, 15.318375], [38.325422, 16.430054],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -207,6 +207,7 @@ L.marker([39.250225, 14.452987], { icon: videoIcon }).addTo(map).bindPopup(`
     { coords: [38.476799, 14.962392], nom: "Porto Pignataro Lipari (îles Eoliennes)", date: "11 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_d64c3a0bf7e24e749aa5478e3af50b68~mv2.jpeg", lien:"https://www.andyboat.com/post/lipari", galerie: "https://www.andyboat.com/copie-de-photos-ventotène#lipari"},
     { coords: [37.846765, 15.288334], nom: "Mouillage bouée Baia di Taormina", date: "14 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_3f48ff640af04726aa647b6c5abbf753~mv2.jpeg", galerie:"https://andyboat.com/copie-de-photos-lipari#taormina"},
     { coords: [37.062218, 15.289503], nom: "Port de Syracuse", date: "15 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_bd49b1a504bd432580937506b4e04666~mv2.jpeg"},
+    { coords: [38.325422, 16.430054], nom: "Port de Roccella", date: "22 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_358f697fb77545de8d662661167cce43~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
