--- a/index.html
+++ b/index.html
@@ -182,6 +182,23 @@ L.marker([39.250225, 14.452987], { icon: videoIcon }).addTo(map).bindPopup(`
     <source src="https://video.wixstatic.com/video/e51b28_a98c9cc3a557407ba4f317fb7ee5059b/480p/mp4/file.mp4" type="video/mp4">
     Votre navigateur ne supporte pas la vidéo HTML5.
   </video>
+
+  // Marqueur vidéo — point [38.577695, 16.809082] avec titre
+L.marker([38.577695, 16.809082], {
+    icon: L.icon({
+        iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon-2x-green.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+        shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+        shadowSize: [41, 41]
+    })
+}).addTo(map).bindPopup(`
+  <b>Magic Point</b><br>
+  <video width="300" controls style="margin-top: 5px;">
+    <source src="https://video.wixstatic.com/video/e51b28_c8a189b7d54e4e2797b2bfda852c63bf/1080p/mp4/file.mp4" type="video/mp4">
+    Votre navigateur ne supporte pas la vidéo HTML5.
+  </video>
 `);
 
   var escales = [
