--- a/index.html
+++ b/index.html
@@ -158,14 +158,11 @@ var paddingOptions = isMobile
 
 map.fitBounds(polyline.getBounds(), paddingOptions);
 
- // Icône personnalisée verte pour vidéos
 const videoIcon = L.icon({
-    iconUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon-2x-green.png',
-    iconSize: [25, 41],
-    iconAnchor: [12, 41],
-    popupAnchor: [1, -34],
-    shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
-    shadowSize: [41, 41]
+    iconUrl: 'https://static.wixstatic.com/media/e51b28_xxxxxxxx_camera.png',
+    iconSize: [32, 32],       // selon la taille de ton PNG
+    iconAnchor: [16, 32],     // centre horizontal, bas vertical
+    popupAnchor: [0, -32],    // décalage du popup vers le haut
 });
 
 // Marqueur vidéo 1 — premier tiers exact
