--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
     [37.567168, 15.216064], [37.254107, 15.294342], [37.054492, 15.315628], [37.049800, 15.293312],
     [37.062218, 15.289503], [37.050956, 15.289364], [37.051718, 15.318375], [37.872143, 16.144409],
     [38.325422, 16.430054], [38.319496, 16.430440], [38.360503, 16.561890], [38.577695, 16.809082], 
-    [38.950331, 17.204590], [39.037186, 17.219009], [39.077142, 17.135582],
+    [38.950331, 17.204590], [39.037186, 17.219009], [39.077142, 17.135582], [39.083139, 17.172832],
+    [39.788943, 18.346739], [39.794383, 18.358111],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -218,6 +219,7 @@ L.marker([39.250225, 14.452987], { icon: videoIcon }).addTo(map).bindPopup(`
     { coords: [37.062218, 15.289503], nom: "Port de Syracuse", date: "15 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_bd49b1a504bd432580937506b4e04666~mv2.jpeg"},
     { coords: [38.325422, 16.430054], nom: "Port de Roccella", date: "22 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_358f697fb77545de8d662661167cce43~mv2.jpeg"},
     { coords: [39.077142, 17.135582], nom: "Port de Crotone", date: "24 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_1432513515084d22b761b713b9e0206b~mv2.jpeg"},
+    { coords: [39.794383, 18.358111], nom: "Porto di Santa Maria di Leuca", date: "26 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_59bd850292044aee8a81984cabf40747~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
