--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ L.marker([39.250225, 14.556885], { icon: videoIcon }).addTo(map).bindPopup(`
   `);
 
   L.marker([37.823006, 15.290909], { icon: videoIcon }).addTo(map).bindPopup(`
+  <b>L'Etna</b><br>
   <video width="300" controls>
     <source src="https://video.wixstatic.com/video/e51b28_524dd92bd5d145bab4a378e43455d2d8/1080p/mp4/file.mp4">
 Votre navigateur ne supporte pas la vidéo HTML5.
