--- a/index.html
+++ b/index.html
@@ -137,8 +137,11 @@
     [38.325422, 16.430054], [38.319496, 16.430440], [38.360503, 16.561890], [38.577695, 16.809082], 
     [38.950331, 17.204590], [39.037186, 17.219009], [39.077142, 17.135582], [39.083139, 17.172832],
     [39.788943, 18.346739], [39.794383, 18.358111], [39.786214, 18.355751], [39.791094, 18.379097],
-    [39.819480, 18.403473], [40.119565, 18.561401], [40.333460, 18.437805], [40.655509, 18.042297],
+    [39.819480, 18.403473], [40.119565, 18.561401], [40.315007, 18.513336], [40.655509, 18.042297],
     [40.660555, 17.992859], [40.657592, 17.981186], [40.644560, 17.951574], [40.641410, 17.940674],
+    [40.644560, 17.951574], [40.657592, 17.981186], [40.660555, 17.992859], [40.655509, 18.042297],
+    [40.555287, 18.175507], [40.406569, 18.312149], [40.293341, 18.430252], [40.260235, 40.260235],
+    [40.259154, 18.442698],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -233,6 +236,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.077142, 17.135582], nom: "Port de Crotone", date: "24 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_1432513515084d22b761b713b9e0206b~mv2.jpeg"},
     { coords: [39.794383, 18.358111], nom: "Porto di Santa Maria di Leuca", date: "26 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_59bd850292044aee8a81984cabf40747~mv2.jpeg"},
     { coords: [40.641410, 17.940674], nom: "Porto di Brindisi", date: "28 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_61ac5b61d27d43d2a53cf64ab65e30ce~mv2.jpg"},
+    { coords: [40.259154, 18.442698], nom: "Mouillage anse de St Andrea", date: "2 août 2025", image: "https://static.wixstatic.com/media/e51b28_d9666fd10a454386af1c56a620434394~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
