--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     [40.660555, 17.992859], [40.657592, 17.981186], [40.644560, 17.951574], [40.641410, 17.940674],
     [40.644560, 17.951574], [40.657592, 17.981186], [40.660555, 17.992859], [40.655509, 18.042297],
     [40.555287, 18.175507], [40.406569, 18.312149], [40.293341, 18.430252], [40.260235, 18.446431],
-    [40.259154, 18.442698],
+    [40.259154, 18.442698], [39.874224, 19.577637], [39.877804, 19.587303],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -237,6 +237,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.794383, 18.358111], nom: "Porto di Santa Maria di Leuca", date: "26 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_59bd850292044aee8a81984cabf40747~mv2.jpeg"},
     { coords: [40.641410, 17.940674], nom: "Porto di Brindisi", date: "28 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_61ac5b61d27d43d2a53cf64ab65e30ce~mv2.jpg"},
     { coords: [40.259154, 18.442698], nom: "Mouillage anse de St Andrea", date: "2 août 2025", image: "https://static.wixstatic.com/media/e51b28_d9666fd10a454386af1c56a620434394~mv2.jpeg"},
+    { coords: [39.877804, 19.587303], nom: "Mouillage Erikoussa", date: "3 août 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
