--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.794383, 18.358111], nom: "Porto di Santa Maria di Leuca", date: "26 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_59bd850292044aee8a81984cabf40747~mv2.jpeg"},
     { coords: [40.641410, 17.940674], nom: "Porto di Brindisi", date: "28 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_61ac5b61d27d43d2a53cf64ab65e30ce~mv2.jpg"},
     { coords: [40.259154, 18.442698], nom: "Mouillage anse de St Andrea", date: "2 août 2025", image: "https://static.wixstatic.com/media/e51b28_d9666fd10a454386af1c56a620434394~mv2.jpeg"},
-    { coords: [39.877804, 19.587303], nom: "Mouillage Erikoussa", date: "3 août 2025"},
+    { coords: [39.877804, 19.587303], nom: "Mouillage Erikoussa", date: "3 août 2025", image: "https://static.wixstatic.com/media/e51b28_dd865b2542034423b1a381c3a07075a6~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
