--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
     [40.555287, 18.175507], [40.406569, 18.312149], [40.293341, 18.430252], [40.260235, 18.446431],
     [40.259154, 18.442698], [39.874224, 19.577637], [39.877804, 19.587303], [39.845845, 19.696426],
     [39.817898, 19.909973], [39.778674, 19.958081], [39.777354, 19.954069], [39.774027, 19.968338],
-    [39.662998, 19.866028], [39.663584, 19.861822], [39.665349, 19.859719],
+    [39.662998, 19.866028], [39.663584, 19.861822], [39.665349, 19.859719], [39.645469, 19.878302],
+    [39.625111, 19.937525], [39.621718, 19.930100], [39.621718, 19.926624],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -241,7 +242,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [40.259154, 18.442698], nom: "Mouillage anse de St Andrea", date: "2 août 2025", image: "https://static.wixstatic.com/media/e51b28_d9666fd10a454386af1c56a620434394~mv2.jpeg"},
     { coords: [39.877804, 19.587303], nom: "Mouillage Erikoussa", date: "3 août 2025", image: "https://static.wixstatic.com/media/e51b28_dd865b2542034423b1a381c3a07075a6~mv2.jpeg"},
     { coords: [39.777354, 19.954069], nom: "Mouillage plage de Akoli", date: "7 août 2025"},
-    { coords: [39.665349, 19.859719], nom: "Mouillage anse de Ormos Kommeno", date: "10août 2025"},
+    { coords: [39.665349, 19.859719], nom: "Mouillage anse de Ormos Kommeno", date: "10 août 2025"},
+    { coords: [39.621718, 19.926624], nom: "Mouillage au pied des remparts de la vieille citadelle de Corfou", date: "16 août 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
