--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [40.641410, 17.940674], nom: "Porto di Brindisi", date: "28 juillet 2025", image: "https://static.wixstatic.com/media/e51b28_61ac5b61d27d43d2a53cf64ab65e30ce~mv2.jpg"},
     { coords: [40.259154, 18.442698], nom: "Mouillage anse de St Andrea", date: "2 août 2025", image: "https://static.wixstatic.com/media/e51b28_d9666fd10a454386af1c56a620434394~mv2.jpeg"},
     { coords: [39.877804, 19.587303], nom: "Mouillage Erikoussa", date: "3 août 2025", image: "https://static.wixstatic.com/media/e51b28_dd865b2542034423b1a381c3a07075a6~mv2.jpeg"},
-    { coords: [39.777354, 19.954069], nom: "Mouillage plage de Akoli", date: "7 août 2025"},
-    { coords: [39.665349, 19.859719], nom: "Mouillage anse de Ormos Kommeno", date: "10 août 2025"},
-    { coords: [39.621718, 19.926624], nom: "Mouillage au pied des remparts de la vieille citadelle de Corfou", date: "16 août 2025"},
+    { coords: [39.777354, 19.954069], nom: "Mouillage plage de Akoli", date: "7 août 2025", image: "https://static.wixstatic.com/media/e51b28_5fd981519e5f414e8ff2f8144647ceda~mv2.jpeg"},
+    { coords: [39.665349, 19.859719], nom: "Mouillage anse de Ormos Kommeno", date: "10 août 2025", image: "https://static.wixstatic.com/media/e51b28_e5f1e428f9c14c14b3b38a0f5ddfebd2~mv2.jpeg"},
+    { coords: [39.621718, 19.926624], nom: "Mouillage au pied des remparts de la vieille citadelle de Corfou", date: "16 août 2025", image: "https://static.wixstatic.com/media/e51b28_af7b7d7b4c1242ce8b7e496b48cf20b9~mv2.jpeg"},
   ];
 
        var isMobile = window.innerWidth < 768;
