--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     [39.774027, 19.968338], [39.742686, 19.947395], [39.662998, 19.866028], [39.663584, 19.861822], 
     [39.665349, 19.859719], [39.645469, 19.878302], [39.625111, 19.937525], [39.621718, 19.930100], 
     [39.621718, 19.926624], [39.467334, 20.076313], [39.437333, 20.095066], [39.340000, 20.145183],
+    [39.199319, 20.215187], [39.183861, 20.203514], [39.181844, 20.203021],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -245,6 +246,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.777354, 19.954069], nom: "Mouillage plage de Akoli", date: "7 août 2025", image: "https://static.wixstatic.com/media/e51b28_5fd981519e5f414e8ff2f8144647ceda~mv2.jpeg"},
     { coords: [39.665349, 19.859719], nom: "Mouillage anse de Ormos Kommeno", date: "10 août 2025", image: "https://static.wixstatic.com/media/e51b28_e5f1e428f9c14c14b3b38a0f5ddfebd2~mv2.jpeg"},
     { coords: [39.621718, 19.926624], nom: "Mouillage au pied des remparts de la vieille citadelle de Corfou", date: "16 août 2025", image: "https://static.wixstatic.com/media/e51b28_af7b7d7b4c1242ce8b7e496b48cf20b9~mv2.jpeg"},
+    { coords: [39.181844, 20.203021], nom: "Mouillage Baie de Mongonissi", date: "20 août 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
