--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
     [39.326729, 20.184631], [39.199319, 20.215187], [39.183861, 20.203514], [39.181844, 20.203021],
     [39.183861, 20.203514], [39.185791, 20.205703], [39.184335, 20.222054], [38.847312, 20.724421],
     [38.845850, 20.721974], [38.846050, 20.719013], [38.836214, 20.712919], [38.832633, 20.713928], 
-    [38.806657, 20.728283], [38.792460, 20.725365], 
+    [38.806657, 20.728283], [38.792460, 20.725365], [38.675778, 20.809393], [38.660029, 20.811882],
+    [38.658050, 20.802644],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -255,9 +256,10 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [40.259154, 18.442698], nom: "Mouillage anse de St Andrea", date: "2 août 2025", image: "https://static.wixstatic.com/media/e51b28_d9666fd10a454386af1c56a620434394~mv2.jpeg"},
     { coords: [39.877804, 19.587303], nom: "Mouillage Erikoussa", date: "3 août 2025", image: "https://static.wixstatic.com/media/e51b28_dd865b2542034423b1a381c3a07075a6~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
     { coords: [39.777354, 19.954069], nom: "Mouillage plage de Akoli", date: "7 août 2025", image: "https://static.wixstatic.com/media/e51b28_5fd981519e5f414e8ff2f8144647ceda~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
-    { coords: [39.665349, 19.859719], nom: "Mouillage anse de Ormos Kommeno", date: "10 août 2025", image: "https://static.wixstatic.com/media/e51b28_e5f1e428f9c14c14b3b38a0f5ddfebd2~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
+    { coords: [39.665349, 19.859719], nom: "Mouillage Ormos Kommeno", date: "10 août 2025", image: "https://static.wixstatic.com/media/e51b28_e5f1e428f9c14c14b3b38a0f5ddfebd2~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
     { coords: [39.621718, 19.926624], nom: "Mouillage au pied des remparts de la vieille citadelle de Corfou", date: "16 août 2025", image: "https://static.wixstatic.com/media/e51b28_af7b7d7b4c1242ce8b7e496b48cf20b9~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
     { coords: [39.181844, 20.203021], nom: "Mouillage Baie de Mongonissi", date: "20 août 2025", image: "https://static.wixstatic.com/media/e51b28_fe7a2cd5b29545d3bbf1fdc37d8c510c~mv2.jpeg"},
+    { coords: [38.658050, 20.802644], nom: "Mouillage Ormos Elia", date: "23 août 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
