--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
     [39.183861, 20.203514], [39.185791, 20.205703], [39.184335, 20.222054], [38.847312, 20.724421],
     [38.845850, 20.721974], [38.846050, 20.719013], [38.836214, 20.712919], [38.832633, 20.713928], 
     [38.806657, 20.728283], [38.792460, 20.725365], [38.675778, 20.809393], [38.660029, 20.811882],
-    [38.658050, 20.802644],
+    [38.658050, 20.802644], [38.654792, 20.798423], [38.654734, 20.805273], [38.579507, 20.823212],
+    [38.479327, 20.776863], [38.363582, 20.757465], [38.364968, 20.737907],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -259,7 +260,8 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.665349, 19.859719], nom: "Mouillage Ormos Kommeno, île de Corfou", date: "10 août 2025", image: "https://static.wixstatic.com/media/e51b28_e5f1e428f9c14c14b3b38a0f5ddfebd2~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
     { coords: [39.621718, 19.926624], nom: "Mouillage au pied des remparts de la vieille citadelle de Corfou, île de Corfou", date: "16 août 2025", image: "https://static.wixstatic.com/media/e51b28_af7b7d7b4c1242ce8b7e496b48cf20b9~mv2.jpeg", lien: "https://www.andyboat.com/post/les-vacances-à-4-à-corfou"},
     { coords: [39.181844, 20.203021], nom: "Mouillage Baie de Mongonissi, île de Paxos", date: "20 août 2025", image: "https://static.wixstatic.com/media/e51b28_fe7a2cd5b29545d3bbf1fdc37d8c510c~mv2.jpeg"},
-    { coords: [38.658050, 20.802644], nom: "Mouillage Ormos Elia, île de Meganisi", date: "23 août 2025", image: "https://static.wixstatic.com/media/e51b28_134c8887703c4e51a82307395b891a72~mv2.jpeg"},
+    { coords: [38.654792, 20.798423], nom: "Mouillage Ormos Elia, île de Meganisi", date: "23 août 2025", image: "https://static.wixstatic.com/media/e51b28_134c8887703c4e51a82307395b891a72~mv2.jpeg"},
+    { coords: [38.364968, 20.737907], nom: "Mouillage Ormos Sarakiniko, île de Ithaque", date: "27 août 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
