--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
     [38.806657, 20.728283], [38.792460, 20.725365], [38.675778, 20.809393], [38.660029, 20.811882],
     [38.658050, 20.802644], [38.654792, 20.798423], [38.654734, 20.805273], [38.579507, 20.823212],
     [38.479327, 20.776863], [38.363582, 20.757465], [38.364968, 20.737907], [38.353436, 20.769310],
-    [38.258402, 21.115723], [38.254560, 21.701088],
+    [38.258402, 21.115723], [38.254560, 21.701088], [38.261224, 21.733832], [38.252867, 21.733618],
+    [38.250034, 21.734240],
   ];
   var polyline = L.polyline(route, {
     color: 'red',
@@ -263,6 +264,7 @@ Votre navigateur ne supporte pas la vidéo HTML5.
     { coords: [39.181844, 20.203021], nom: "Mouillage Baie de Mongonissi, île de Paxos", date: "20 août 2025", image: "https://static.wixstatic.com/media/e51b28_fe7a2cd5b29545d3bbf1fdc37d8c510c~mv2.jpeg"},
     { coords: [38.654792, 20.798423], nom: "Mouillage Ormos Elia, île de Meganisi", date: "23 août 2025", image: "https://static.wixstatic.com/media/e51b28_134c8887703c4e51a82307395b891a72~mv2.jpeg"},
     { coords: [38.364968, 20.737907], nom: "Mouillage Ormos Sarakiniko, île de Ithaque", date: "27 août 2025", image: "https://static.wixstatic.com/media/e51b28_88d2d78285e2480fa24aa88b876eba9c~mv2.jpeg"},
+    { coords: [38.250034, 21.734240], nom: "Port de Patras, quai 8 public, Péloponnèse", date: "31 août 2025"},
   ];
 
        var isMobile = window.innerWidth < 768;
